--- a/package.json
+++ b/package.json
@@ -5,8 +5,19 @@
   "repository": "hugoarmor:hugoarmor/time-sheet-challenge.git",
   "author": "hugoarmor <hugoarmoreira@hotmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon",
+    "build": "tsc",
+    "start": "node ./build/server.js"
+  },
   "dependencies": {
     "@types/express": "^4.17.21",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "nodemon": "^3.0.3",
+    "tsc": "^2.0.4",
+    "typescript": "^5.3.3"
   }
 }
