--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "start": "node ./build/server.js"
   },
   "dependencies": {
+    "@prisma/client": "5.9.1",
     "@types/express": "^4.17.21",
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
+    "prisma": "^5.9.1",
     "tsc": "^2.0.4",
     "typescript": "^5.3.3"
   }
