--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "5.9.1",
     "@types/express": "^4.17.21",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
