--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@prisma/client": "5.9.1",
     "@types/express": "^4.17.21",
     "date-fns": "^3.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tsyringe": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
+    "reflect-metadata": "^0.2.1",
     "tsc": "^2.0.4",
     "typescript": "^5.3.3"
   }
