--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node ./build/server.js"
+    "start": "node ./build/server.js",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@prisma/client": "5.9.1",
@@ -18,10 +20,14 @@
     "tsyringe": "^4.8.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
     "reflect-metadata": "^0.2.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "tsc": "^2.0.4",
     "typescript": "^5.3.3"
   }
