--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node ./build/server.js",
+    "start": "node ./build/src/server.js",
     "test": "jest",
     "coverage": "jest --coverage"
   },
